# pico-realtime-webserver

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  header.html
.github/workflows/: cmake.yml  codeql.yml
include/: auth.h  cgi.h  common.h  lwipopts.h  realtime_webserver.h  ssi.h  state.h
src/: CMakeLists.txt  auth.c  cgi.c  common.c  main.c  realtime_webserver.c  ssi.c  state.c
src/fs/: admin.shtml  index.html  ssi_cgi.shtml
